修改路由跳转

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0 user-scalable=no">
   <title>React App</title>
   <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="./iconfont/iconfont.css">
   <script src="/rem.js"></script>
 </head>
 <body>
